Code downgraded to Java 10